validator_derive_tests/tests/compile-fail/not_a_string_type.rs
use validator::Validate;

#[derive(Validate)]
struct Register {
    #[validate(email)]
    email: Vec<u8>,
}

fn main() {}
