validator_derive_tests/tests/compile-fail/not_a_string_type.stderr
error: `email` validator can only be used on String, &str, Cow<'_,str> or an Option of those
 --> $DIR/not_a_string_type.rs:6:12
  |
6 |     email: Vec<u8>,
  |            ^^^
